# backend

./: .example.env  .gitignore  Cargo.toml  docker-compose.yml  rustfmt.toml
.github/ISSUE_TEMPLATE/: new-feature-issue-template.md  new-task.md
crates/core/auth/: Cargo.toml
crates/core/auth/src/: lib.rs
crates/core/cache/: Cargo.toml
crates/core/cache/src/: cache.rs  lib.rs  redis.rs
crates/core/crypto/: Cargo.toml
crates/core/crypto/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs  postgres.rs  redis.rs
crates/core/database/src/models/: cards.rs  mod.rs  picks.rs  roles.rs  sessions.rs  users.rs
crates/core/database/src/schema/: mod.rs  users.rs
crates/core/database/src/types/: mod.rs  role.rs  visibility.rs
crates/core/media/: Cargo.toml
crates/core/media/src/: lib.rs
crates/core/models/: Cargo.toml
crates/core/models/src/: lib.rs
crates/core/models/src/api/: auth.rs  cards.rs  errors.rs  mod.rs  picks.rs  users.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: lib.rs
crates/core/storage/: Cargo.toml
crates/core/storage/src/: lib.rs  temp.rs
crates/core/utils/: Cargo.toml
crates/core/utils/src/: lib.rs
crates/server/: Cargo.toml
crates/server/api/: Cargo.toml
crates/server/src/: docs.rs  error.rs  main.rs
crates/server/src/auth/: extract.rs  mod.rs
crates/server/src/routes/: mod.rs
crates/server/src/routes/v1/: mod.rs
crates/server/src/routes/v1/auth/: login.rs  logout.rs  mod.rs  register.rs
crates/server/src/routes/v1/cards/: create.rs  delete_card.rs  fetch_card.rs  fetch_list.rs  get_by_id.rs  mod.rs
crates/server/src/routes/v1/files/: get_file.rs  mod.rs
crates/server/src/routes/v1/picks/: create.rs  get_by_id.rs  get_file.rs  get_me.rs  mod.rs
crates/server/src/routes/v1/users/: change_username.rs  delete_self.rs  fetch_self.rs  fetch_self_cards.rs  fetch_self_sessions.rs  fetch_user.rs  get_by_username.rs  get_me.rs  get_me_cards.rs  get_me_picks.rs  get_me_sessions.rs  mod.rs
docker/: docker-compose.yml
migrations/: 20250811075715_init.sql  20250812201133_init.sql  20250816182929_add_sessions.sql  20250823083955_add_content_table.sql  20250923101749_init.sql
src/: error.rs  lib.rs  main.rs
src/database/: error.rs  mod.rs  postgres.rs  redis.rs
src/database/repositories/: mod.rs  sessions.rs  users.rs
src/models/api/: error.rs  mod.rs  sessions.rs  users.rs
src/models/database/: mod.rs  sessions.rs  users.rs
src/routes/: mod.rs
src/routes/v1/: auth.rs  mod.rs  users.rs
src/services/: auth.rs  users.rs
