[workspace]
resolver = "2"
members = [
	"crates/server",
	"crates/core/*"
]

[workspace.dependencies]
actix-web = "4.11.0"
async-trait = "0.1.89"
tokio = "1.47.1"
sqlx = "0.8.5"
deadpool-redis = "0.22.0"
redis = "0.32.4"
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
argon2 = "0.5.3"
rand = "0.9.2"
uuid = "1.17.0"
base64 = "0.22.1"
derive_more = "2.0.1"
validator = "0.19"

boar-utils = {git = "https://github.com/justpic/boar-utils", branch = "master"}

# Docs
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3