[package]
name = "justpic-backend"
edition = "2024"
version = "0.1.0"

[dependencies]
justpic-database = {path = "../core/database"}
justpic-cache = {path = "../core/cache"}
justpic-storage = {path = "../core/storage"}

justpic-models = {path = "../core/models"}

actix-web = {workspace = true}

tokio = {workspace = true, features = ["sync", "rt-multi-thread", "macros"]}

dotenvy = {workspace = true}

tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }

argon2 = { workspace = true, features = ["std"] }

derive_more = {workspace = true, features = ["from", "display"]}

utoipa = {workspace = true, features = ["actix_extras"]}
utoipa-swagger-ui = {workspace = true, features = ["actix-web"]}