[package]
name = "justpic-database"
edition = "2024"
version = "0.1.0"

[dependencies]
sqlx = {workspace = true, features = ["runtime-tokio", "postgres", "macros", "time", "uuid"]}

deadpool-redis.workspace = true

dotenvy.workspace = true

time = { workspace = true, features = ["serde", "serde-human-readable"] }

tracing.workspace = true

uuid = {workspace = true, features = ["v4", "serde"]}

derive_more = {workspace = true, features = ["from", "display"]}