[package]
name = "database"
edition = "2024"
version = "0.1.0"

[dependencies]
# Sql-driver
sqlx = {version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "time", "uuid"]}

# Futures
tokio = {workspace = true, features = ["sync", "rt-multi-thread"]}
tokio-util.workspace = true

# Uuid
uuid = {version = "1.17.0", features = ["v4"]}

# Time
time.workspace = true

# Utils
derive_more.workspace = true
tracing.workspace = true
dotenvy.workspace = true