[package]
name = "models"
edition = "2024"
version = "0.1.0"

[dependencies]
# Ser De
serde.workspace = true
serde_json.workspace = true

# Validator
validator = {version = "0.19", features = ["derive"]}

# Uuid
uuid = {version = "1.17.0", features = ["v4", "serde"]}

# Time
time = { workspace = true, features = ["serde", "serde-human-readable"] }